# smq

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.linux.gcc  Makefile.nmake  Makefile.osx.clang  Makefile.win.clang  Makefile.win.mingw  Makefile.win.msvc  README.md  configuration  configure  smq.cfp  smq.cfpg  smq.h  smq.sln  smq.vcxproj  smq.vcxproj.filters  smq_alignpop.h  smq_alignpush.h  smq_asserts.h  smq_errors.c  smq_inst.c  smq_inst.h  smq_libc.h  smq_limit.h  smq_logs.c  smq_logs.h  smq_msg.c  smq_os.c  smq_os.h  smq_params.c  smq_params.h  smq_res.h  smq_utils.h
examples/: CMakeLists.txt
examples/example-quickstart/: CMakeLists.txt  quickstart-client-main.c  quickstart-server-main.c  quickstart.sln
examples/example-quickstart/client/: client.vcxproj
examples/example-quickstart/server/: server.vcxproj
examples/quickstart/: CMakeLists.txt  quickstart-client-main.c
os/linux.gcc/: os.h
os/osx.clang/: os.h
os/win.mingw/: os.c  os.c.inc  os.h
os/win.msvc/: os.c  os.c.inc  os.h
shm/: smq_alignpop.h  smq_alignpush.h  smq_errors.c  smq_errors.h  smq_libc.h  smq_logs.h  smq_msg.c  smq_os.h
shm/examples/quickstart/: quickstart-server-main.c
shm/os/osx.clang/: os.c
shm/os/win.mingw/: smq.def
shm/os/win.msvc/: os.c  smq.def
smq.xcodeproj/: project.pbxproj
smq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
smq.xcodeproj/project.xcworkspace/xcuserdata/llj.xcuserdatad/: UserInterfaceState.xcuserstate
smq.xcodeproj/xcuserdata/llj.xcuserdatad/xcschemes/: xcschememanagement.plist
sock/: .gitignore
src/: smq.h  smq_alignpop.h  smq_alignpush.h  smq_asserts.h  smq_errors.c  smq_errors.h  smq_inst.c  smq_inst.h  smq_layout.h  smq_libc.c  smq_libc.h  smq_limit.h  smq_logs.c  smq_logs.h  smq_msg.c  smq_msg.h  smq_options.h  smq_os.c  smq_os.h  smq_params.c  smq_params.h  smq_res.h  smq_utils.c  smq_utils.h
src/os/linux.gcc/: os.c.inc
src/os/win.msvc/: os.c.inc  os.h  smq.def
trush/: Makefile.nmake  Makefile.osx.clang  Makefile.win.msvc  configure
